--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="popupTheme">@style/actionMenu</item>
         <item name="android:colorBackground">@color/accent</item>
 
         <!-- MaterialDrawer specific values -->
@@ -26,6 +27,12 @@
     <style name="AppThemeDark" parent="MaterialDrawerTheme">
 
     </style>
+
+    <style name="actionMenu" parent="Theme.AppCompat.Light">
+        <item name="background">@color/colorAccent</item>
+        <item name="actionMenuTextColor">@color/colorBlack</item>
+    </style>
+
 
     <style name="settingsButtons">
         <item name="android:layout_width">match_parent</item>
