--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,15 +12,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/mainToolbar" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/registerDataContainer"
+        android:layout_width="match_parent"
+        android:id="@+id/dataContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registerToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"/>
-
+        app:layout_constraintTop_toBottomOf="@id/registerToolbar"
+        android:layout_height="0dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
