--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.ChatsFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,6 +16,6 @@
         android:textColor="@color/colorBlack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chats" />
+        android:text="Чаты" />
 
 </FrameLayout>
