--- a/app/src/main/res/layout/fragment_enter_code.xml
+++ b/app/src/main/res/layout/fragment_enter_code.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.EnterCodeFragment">
 
     <ImageView
         android:id="@+id/register_image"
-        android:layout_marginTop="@dimen/vertical_large_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/vertical_large_margin"
         android:src="@drawable/register_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,14 +22,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/normalText"
-        android:textColor="@color/colorBlack"
         android:gravity="center"
         android:layout_margin="@dimen/vertical_margin"
+        android:textColor="@color/colorBlack"
+        android:textSize="@dimen/normalText"
         android:text="@string/register_text_enter_code"
         app:layout_constraintTop_toBottomOf="@id/register_image"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/register_text_we_sent"
@@ -38,9 +38,8 @@
         style="@style/smallText"
         android:gravity="center"
         android:layout_margin="@dimen/vertical_margin"
-        android:text="@string/register_text_we_send"
+        android:text="@string/register_text_we_sent"
         app:layout_constraintTop_toBottomOf="@+id/register_text_enter_code"/>
-
 
     <EditText
         style="@style/editText"
@@ -51,7 +50,6 @@
         android:hint="@string/register_hint_default_code"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/register_text_we_sent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/register_text_we_sent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
