--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,8 +7,8 @@
     tools:context=".ui.fragments.SettingsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/settings_header_block"
-        android:layout_width="411dp"
+        android:id="@+id/settings_header_bloc"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,126 +19,133 @@
             android:id="@+id/settings_user_photo"
             android:layout_width="@dimen/settings_user_photo_width"
             android:layout_height="@dimen/settings_user_photo_height"
+            android:layout_marginStart="@dimen/horizontal_margin"
             android:src="@drawable/default_photo"
             app:civ_circle_background_color="@color/colorAccent"
-            android:layout_marginStart="@dimen/horizontal_margin"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/settings_username"
+            android:id="@+id/settings_full_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
-            android:text="@string/settings_default_username"
-            android:textSize="@dimen/normalText"
-            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="@dimen/vertical_margin"
             android:layout_marginStart="@dimen/horizontal_margin"
-            app:layout_constraintTop_toTopOf="@+id/settings_user_photo"/>
+            android:layout_marginTop="@dimen/vertical_margin"
+            android:text="@string/settings_default_username"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/normalText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/settings_user_photo"
+            app:layout_constraintTop_toTopOf="@id/settings_user_photo" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorAccentDark"
-            android:text="@string/settings_default_status"
-            android:textSize="@dimen/smallText"
             android:layout_marginStart="@dimen/horizontal_margin"
+            android:text="@string/settings_default_status"
+            android:textColor="@color/colorAccentDark"
+            android:textSize="@dimen/smallText"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/settings_username"
-            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"/>
+            app:layout_constraintStart_toEndOf="@id/settings_user_photo"
+            app:layout_constraintTop_toBottomOf="@id/settings_full_name" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/settings_text_account"
         android:layout_width="match_parent"
-        android:text="@string/settings_text_account"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/horizontal_margin"
+        android:layout_marginTop="@dimen/vertical_large_margin"
+        android:text="@string/settings_text_account"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/smallText"
         android:textStyle="bold"
-        android:layout_marginStart="@dimen/horizontal_margin"
-        android:layout_marginTop="@dimen/vertical_large_margin"
-        app:layout_constraintTop_toBottomOf="@+id/settings_header_block"/>
+        app:layout_constraintTop_toBottomOf="@id/settings_header_bloc" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/settings_btn_change_number_phone"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/settings_text_account"
-    style="@style/settingsButtons">
-
-    <TextView
-        android:id="@+id/settings_phone_number"
-        app:layout_constraintTop_toTopOf="@+id/settings_btn_change_number_phone"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/settings_default_number"
-        style="@style/normalText" />
-    <TextView
-        android:id="@+id/settings_label_phone_number"
-        app:layout_constraintTop_toBottomOf="@+id/settings_phone_number"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/settings_change_phone_number"
-        style="@style/smallText" />
-    <View
-        app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number"
-        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/settings_btn_change_number_phone"
+        style="@style/settingsButtons"
         app:layout_constraintEnd_toEndOf="parent"
-        style="@style/separator" />
-</androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/settings_btn_change_login"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_number_phone"
-        style="@style/settingsButtons">
+        app:layout_constraintTop_toBottomOf="@id/settings_text_account">
 
         <TextView
-            android:id="@+id/settings_login"
-            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_login"
+            android:id="@+id/settings_phone_number"
+            style="@style/normalText"
+            android:text="@string/settings_default_number"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="@string/settings_default_login"
-            style="@style/normalText" />
+            app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone" />
+
         <TextView
-            android:id="@+id/settings_label_login"
-            app:layout_constraintTop_toBottomOf="@+id/settings_login"
+            android:id="@+id/settings_label_phone_number"
+            style="@style/smallText"
+            android:text="@string/settings_label_phone_number"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="@string/settings_label_login"
-            style="@style/smallText" />
+            app:layout_constraintTop_toBottomOf="@id/settings_phone_number" />
+
         <View
-            app:layout_constraintTop_toBottomOf="@id/settings_label_login"
-            app:layout_constraintStart_toStartOf="parent"
+            style="@style/separator"
             app:layout_constraintEnd_toEndOf="parent"
-            style="@style/separator" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/settings_btn_change_username"
+        style="@style/settingsButtons"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone">
+
+        <TextView
+            android:id="@+id/settings_username"
+            style="@style/normalText"
+            android:text="@string/settings_default_login"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/settings_btn_change_username" />
+
+        <TextView
+            android:id="@+id/settings_label_username"
+            style="@style/smallText"
+            android:text="@string/settings_label_login"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/settings_username" />
+
+        <View
+            style="@style/separator"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/settings_label_username" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/settings_btn_change_bio"
-        app:layout_constraintStart_toStartOf="parent"
+        style="@style/settingsButtons"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_login"
-        style="@style/settingsButtons">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_username">
 
         <TextView
             android:id="@+id/settings_bio"
-            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_bio"
-            app:layout_constraintStart_toStartOf="parent"
+            style="@style/normalText"
             android:text="@string/settings_default_bio"
-            style="@style/normalText" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio" />
+
         <TextView
             android:id="@+id/settings_label_bio"
-            app:layout_constraintTop_toBottomOf="@+id/settings_bio"
-            app:layout_constraintStart_toStartOf="parent"
+            style="@style/smallText"
             android:text="@string/settings_label_bio"
-            style="@style/smallText" />
-        <View
-            app:layout_constraintTop_toBottomOf="@id/settings_label_bio"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/settings_bio" />
+
+        <View
+            style="@style/separator"
             app:layout_constraintEnd_toEndOf="parent"
-            style="@style/separator" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/settings_label_bio" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -148,14 +154,10 @@
         android:layout_height="@dimen/settings_user_photo_height"
         android:src="@drawable/ic_camera"
         android:layout_marginEnd="@dimen/horizontal_margin"
-        app:civ_border_color="@color/colorGray"
+        app:civ_border_color="@color/colorGrey"
         app:civ_circle_background_color="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
+        app:layout_constraintBottom_toBottomOf="@+id/settings_header_bloc"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_header_block" />
+        app:layout_constraintTop_toBottomOf="@+id/settings_header_bloc" />
 
- </androidx.constraintlayout.widget.ConstraintLayout>
-
-        
-
-
+</androidx.constraintlayout.widget.ConstraintLayout>
