--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#0088CC</color>
-    <color name="colorPrimaryDark">#007ACC</color>
+    <color name="colorPrimaryDark">#0052CC</color>
     <color name="colorAccent">#FFFFFF</color>
-    <color name="colorBlack">#000000</color>
     <color name="colorAccentDark">#D1CDCD</color>
-    <color name="colorGray">#837E7E</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorGrey">#837E7E</color>
 
     <!-- Material DEFAULT colors -->
     <color name="material_drawer_primary">#2196F3</color>
