--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="popupTheme">@style/actionMenu</item>
-        <item name="colorControlActivated">@color/colorPrimary</item>
-        <item name="android:colorBackground">@color/accent</item>
+        <item name="android:colorControlActivated">@color/colorPrimary</item>
+        <item name="android:colorBackground">@color/colorAccent</item>
 
         <!-- MaterialDrawer specific values -->
         <item name="material_drawer_background">@color/material_drawer_background</item>
@@ -26,14 +26,13 @@
     </style>
 
     <style name="AppThemeDark" parent="MaterialDrawerTheme">
-
+    <!--TODO Темная тема-->
     </style>
 
     <style name="actionMenu" parent="Theme.AppCompat.Light">
         <item name="background">@color/colorAccent</item>
         <item name="actionMenuTextColor">@color/colorBlack</item>
     </style>
-
 
     <style name="settingsButtons">
         <item name="android:layout_width">match_parent</item>
@@ -42,6 +41,7 @@
         <item name="android:background">@drawable/ripple_effect</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
+
     </style>
 
     <style name="normalText">
@@ -57,23 +57,23 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/horizontal_margin</item>
         <item name="android:textSize">@dimen/smallText</item>
-        <item name="android:textColor">@color/colorGray</item>
+        <item name="android:textColor">@color/colorGrey</item>
     </style>
 
     <style name="separator">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">1dp</item>
-        <item name="android:background">@color/colorGray</item>
+        <item name="android:background">@color/colorGrey</item>
         <item name="android:layout_marginStart">@dimen/horizontal_margin</item>
         <item name="android:layout_marginEnd">@dimen/horizontal_margin</item>
         <item name="android:layout_marginTop">@dimen/vertical_margin</item>
+        <item name="android:layout_height">1dp</item>
     </style>
 
     <style name="mainToolbar">
-        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
         <item name="android:background">@color/colorPrimary</item>
+        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
     </style>
 
     <style name="editText">
@@ -86,5 +86,6 @@
         <item name="android:layout_margin">@dimen/horizontal_margin</item>
         <item name="android:inputType">phone</item>
     </style>
+
 
 </resources>
